card overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -22,5 +22,7 @@ code {
 
 
 .slider__container {
+  max-height: 400px;
+  overflow: hidden;
   padding: 20px;
 }
